// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AirUpgradeBound Should render a message explaining why the bound is not selectable if it is not upgradeable 1`] = `
<DocumentFragment>
  <form>
    <div
      class="air-upgrade-bound"
    >
      <div
        class="air-upgrade-bound--type"
      >
        DEPARTING
      </div>
      <div
        class="flight-brief-summary bgwhite bdb p5"
      >
        <div
          class="flex xlarge pdkblue bold"
        >
          <div
            class="flex4"
          >
            Dec 29
          </div>
          <div
            class="flex2"
          >
            DAL
          </div>
          <div
            class="flex2 flight-brief-summary--airplane center"
          >
            <i
              class="mt3 icon icon_airplane"
            />
          </div>
          <div
            class="flex2"
          >
            HOU
          </div>
        </div>
        <div
          class="flex large gray4"
        >
          <div
            class="flex4"
          >
            Wednesday
          </div>
          <div
            class="flex2 flight-time"
          >
            <div
              class="flight-time--time"
            >
              <span>
                9:10
              </span>
              <span
                class="time-period"
              >
                AM
              </span>
            </div>
          </div>
          <div
            class="flex2"
          />
          <div
            class="flight-brief-summary--summary-group"
          >
            <div
              class="flex2 flight-time"
            >
              <div
                class="flight-time--time"
              >
                <span>
                  3:40
                </span>
                <span
                  class="time-period"
                >
                  PM
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="air-upgrade-bound--no-upgrade-msg"
      >
        mock cannot upgrade reason
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`AirUpgradeBound Should render a selectedable bound if it can be upgraded 1`] = `
<DocumentFragment>
  <form>
    <div
      class="air-upgrade-bound"
    >
      <div
        class="air-upgrade-bound--type"
      >
        DEPARTING
      </div>
      <div
        class="flight-brief-summary bgwhite bdb p5"
      >
        <div
          class="flex xlarge pdkblue bold"
        >
          <div
            class="flex4"
          >
            Dec 29
          </div>
          <div
            class="flex2"
          >
            DAL
          </div>
          <div
            class="flex2 flight-brief-summary--airplane center"
          >
            <i
              class="mt3 icon icon_airplane"
            />
          </div>
          <div
            class="flex2"
          >
            HOU
          </div>
        </div>
        <div
          class="flex large gray4"
        >
          <div
            class="flex4"
          >
            Wednesday
          </div>
          <div
            class="flex2 flight-time"
          >
            <div
              class="flight-time--time"
            >
              <span>
                9:10
              </span>
              <span
                class="time-period"
              >
                AM
              </span>
            </div>
          </div>
          <div
            class="flex2"
          />
          <div
            class="flight-brief-summary--summary-group"
          >
            <div
              class="flex2 flight-time"
            >
              <div
                class="flight-time--time"
              >
                <span>
                  3:40
                </span>
                <span
                  class="time-period"
                >
                  PM
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="air-upgrade-bound--select"
      >
        <div
          class="field"
        >
          <div
            class="relative flex checkbox-button flex-cross-center"
            name="mockId1"
          >
            <div>
              <span
                class="checkbox-button--mark"
              >
                <i
                  class="absolute xlarge bgtransp icon icon_check"
                />
              </span>
            </div>
            <div>
              <div
                class="checkbox-button--children flex-equal-width ml2"
              >
                <div
                  class="air-upgrade-bound--select-message-header"
                >
                  Upgrade all passengers to Business Select®
                </div>
                <div
                  class="air-upgrade-bound--select-message-body"
                >
                  and earn 6,937 more points
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`AirUpgradeBound isNextDay should not show next day indicator when isNextDayArrival is false 1`] = `null`;

exports[`AirUpgradeBound isNextDay should show next day indicator when isNextDayArrival is true 1`] = `
<div
  class="multi-day-indicator multi-day-indicator--nextday-green"
  data-qa="next-day-indicator"
>
  <i
    class="multi-day-indicator--icon multi-day-indicator--icon-small icon icon_next-day-indicator"
  />
  <p
    class="multi-day-indicator--font-small"
  >
    AIR_BOOKING__SHOPPING__NEXT_DAY
  </p>
</div>
`;

exports[`AirUpgradeBound overnight should not show overnight indicator when isOvernight is false 1`] = `null`;

exports[`AirUpgradeBound overnight should show overnight indicator when isOvernight is true 1`] = `
<div
  class="multi-day-indicator multi-day-indicator--overnight-red"
  data-qa="overnight-indicator"
>
  <i
    class="multi-day-indicator--icon multi-day-indicator--icon-small icon icon_next-day-indicator"
  />
  <p
    class="multi-day-indicator--font-small"
  >
    AIR_BOOKING__SHOPPING__OVERNIGHT
  </p>
</div>
`;
